# afs_sim

./: .gitignore
rosbag2_2025_09_11-08_57_26/: metadata.yaml  rosbag2_2025_09_11-08_57_26_0.mcap
src/afs_clock/: package.xml  setup.cfg  setup.py
src/afs_clock/afs_clock/: clock_node.py
src/afs_clock/launch/: sim_clock.launch.py
src/afs_env/: package.xml  setup.cfg  setup.py
src/afs_env/afs_env/: env_from_rasters.py
src/afs_env/launch/: env_from_rasters.launch.py
src/afs_fire/: package.xml  setup.cfg  setup.py
src/afs_fire/afs_fire/: fire_ca_node.py
src/afs_fire/config/: fire_ca.params.yaml
src/afs_fire/launch/: fire_ca.launch.py
src/afs_scenarios/: package.xml  setup.cfg  setup.py
src/afs_scenarios/launch/: run_scenario.launch.py
src/afs_scenarios/scenarios/: simple_hill.yaml  windy_dual_ignitions.yaml
src/afs_world/: package.xml  setup.cfg  setup.py
src/afs_world/afs_world/: map_pub.py
src/afs_world/launch/: world.launch.py
