<?xml version="1.0"?>
<package format="3">
  <name>afs_fire</name>
  <version>0.0.1</version>
  <description>Cellular-automaton fire spread for AFS sim</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
